tests/samples/invalid/constant_type_mismatch.pn

const X: i32 = true;
